sample/retrieveUnpackaged/objects/PortalErrorMessages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Error_Category__c</fullName>
        <description>To enable management and debugging so error messages can be easily &apos;grouped&apos; by logical function e.g., Concessions</description>
        <inlineHelpText>To enable management and debugging so error messages can be easily &apos;grouped&apos; by logical function e.g., Concessions</inlineHelpText>
        <label>Error Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Follow_Up_Required_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is follow up by a CSO required on the portal?</inlineHelpText>
        <label>Is Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Error_Msg__c</fullName>
        <label>Portal Error Msg</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>PortalErrorMessages</label>
</CustomObject>